# tradingview-mcp

./: CHANGELOG.md  README.md  pyproject.toml
src/tradingview_mcp/: server.py
