[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tradingview-mcp"
version = "0.1.0"
description = "MCP server for TradingView market data and technical analysis"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "atilaahmettaner", email = "" },
]
keywords = ["mcp", "tradingview", "trading", "finance", "technical-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "tradingview-ta>=3.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests>=2.31.0",
]

[project.scripts]
tradingview-mcp = "tradingview_mcp.server:main"

[project.urls]
Homepage = "https://github.com/atilaahmettaner/tradingview-mcp"
Repository = "https://github.com/atilaahmettaner/tradingview-mcp"
Issues = "https://github.com/atilaahmettaner/tradingview-mcp/issues"
Changelog = "https://github.com/atilaahmettaner/tradingview-mcp/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/tradingview_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
# Relaxing strict mode for personal use — easier to experiment with
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Fixed: cov_report is not a valid pytest ini option; coverage config belongs in [tool.coverage]
# Increase verbosity so it's easier to see which tests pass/fail during local dev
addopts = "-v"

[tool.coverage.run]
source = ["src/tradingview_mcp"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
